@@ -474,6 +474,10 @@
 		<Product type="0002" id="0002" name="PowerNode 1 port" config="greenwave/powernode1.xml"/>
 		<Product type="0003" id="0004" name="PowerNode 6 port" config="greenwave/powernode6.xml"/>
 	</Manufacturer>
+	<Manufacturer id="0208" name="Hank">
+		<Product type="0200" id="0009" name="Scene Controller 1 Button" config="hank/scenecontroller1.xml"/>
+		<Product type="0200" id="000b" name="Scene Controller 4 Button" config="hank/scenecontroller4.xml"/>
+	</Manufacturer>
 	<Manufacturer id="0017" name="HiTech Automation">
 	</Manufacturer>
 	<Manufacturer id="005b" name="HAI">
